# twopidgeons

./: Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  setup.py
event_test_storage/: blockchain.db  private_key.pem  public_key.pem
mem_storage/: private_key.pem  public_key.pem
node_storage/: abcde.2pg  blockchain.db  blockchain.json  klmno.2pg  private_key.pem  public_key.pem
tests/: test_blockchain.py  test_crypto.py  test_merkle.py  test_node.py  test_utils.py
twopidgeons/: __init__.py  blockchain.py  cli.py  config.py  crypto_utils.py  extension.c  ipfs.py  merkle_module.c  merkle_tree.py  node.py  pow_module.c  server.py  smart_contract.py  steganography.py  storage.py  utils.py  validator.c  vm_module.c  zkp.py
twopidgeons.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
twopidgeons/templates/: index.html
